--- a/index.html
+++ b/index.html
@@ -15,110 +15,112 @@
    RESPONSIVE TYPOGRAPHY SYSTEM
    =============================== */
 
-/* Base (Mobile First) */
-body {
-    font-size: 15px;
-    line-height: 1.6;
-}
+        /* Base (Mobile First) */
+        body {
+            font-size: 15px;
+            line-height: 1.6;
+        }
 
-/* Headings */
-h1 {
-    font-size: 2.2rem;
-    line-height: 1.15;
-}
+        /* Headings */
+        h1 {
+            font-size: 2.2rem;
+            line-height: 1.15;
+        }
 
-h2 {
-    font-size: 1.9rem;
-    line-height: 1.2;
-}
+        h2 {
+            font-size: 1.9rem;
+            line-height: 1.2;
+        }
 
-h3 {
-    font-size: 1.5rem;
-    line-height: 1.3;
-}
+        h3 {
+            font-size: 1.5rem;
+            line-height: 1.3;
+        }
 
-p {
-    font-size: 0.95rem;
-    line-height: 1.7;
-}
+        p {
+            font-size: 0.95rem;
+            line-height: 1.7;
+        }
 
-/* Buttons / labels */
-button, .btn {
-    font-size: 0.9rem;
-}
+        /* Buttons / labels */
+        button,
+        .btn {
+            font-size: 0.9rem;
+        }
 
-/* Small text */
-small, .text-xs {
-    font-size: 0.75rem;
-}
+        /* Small text */
+        small,
+        .text-xs {
+            font-size: 0.75rem;
+        }
 
-/* ===============================
+        /* ===============================
    TABLET (≥768px)
    =============================== */
-@media (min-width: 768px) {
-    body {
-        font-size: 16px;
-    }
+        @media (min-width: 768px) {
+            body {
+                font-size: 16px;
+            }
 
-    h1 {
-        font-size: 2.8rem;
-    }
+            h1 {
+                font-size: 2.8rem;
+            }
 
-    h2 {
-        font-size: 2.3rem;
-    }
+            h2 {
+                font-size: 2.3rem;
+            }
 
-    h3 {
-        font-size: 1.7rem;
-    }
+            h3 {
+                font-size: 1.7rem;
+            }
 
-    p {
-        font-size: 1rem;
-    }
+            p {
+                font-size: 1rem;
+            }
 
-    button {
-        font-size: 0.95rem;
-    }
-}
+            button {
+                font-size: 0.95rem;
+            }
+        }
 
-/* ===============================
+        /* ===============================
    DESKTOP (≥1024px)
    =============================== */
-@media (min-width: 1024px) {
-    body {
-        font-size: 17px;
-    }
+        @media (min-width: 1024px) {
+            body {
+                font-size: 17px;
+            }
 
-    h1 {
-        font-size: 3.5rem;
-        line-height: 1.1;
-    }
+            h1 {
+                font-size: 3.5rem;
+                line-height: 1.1;
+            }
 
-    h2 {
-        font-size: 2.8rem;
-    }
+            h2 {
+                font-size: 2.8rem;
+            }
 
-    h3 {
-        font-size: 2rem;
-    }
+            h3 {
+                font-size: 2rem;
+            }
 
-    p {
-        font-size: 1.05rem;
-    }
-}
+            p {
+                font-size: 1.05rem;
+            }
+        }
 
-/* ===============================
+        /* ===============================
    LARGE SCREENS (≥1440px)
    =============================== */
-@media (min-width: 1440px) {
-    h1 {
-        font-size: 4rem;
-    }
+        @media (min-width: 1440px) {
+            h1 {
+                font-size: 4rem;
+            }
 
-    h2 {
-        font-size: 3.2rem;
-    }
-}
+            h2 {
+                font-size: 3.2rem;
+            }
+        }
 
         body {
             background-color: #020205;
@@ -449,11 +451,20 @@ small, .text-xs {
         class="fixed top-0 w-full z-[200] px-6 md:px-16 py-5 flex justify-between items-center bg-black/30 backdrop-blur-md">
 
         <!-- LOGO -->
-        <div class="relative h-12 w-48 flex items-center">
-            <a href="index.html" class="absolute left-0 top-1/2 -translate-y-1/2 hover:opacity-80 transition-opacity">
-                <img src="image/image.png" alt="Creato Studios Logo" class="h-12 md:h-16 w-auto object-contain">
-            </a>
-        </div>
+<div class="relative h-12 w-48 overflow-visible">
+    <a href="index.html"
+       class="absolute left-0 top-1/2 -translate-y-1/2">
+       
+        <img 
+            src="image/image.png"
+            alt="Creato Studios Logo"
+            class="w-auto h-20 md:h-24 object-contain scale-150 origin-left"
+        >
+        
+    </a>
+</div>
+
+
 
         <!-- DESKTOP NAV -->
         <nav class="hidden md:flex items-center gap-10 font-semibold text-[15px]">
@@ -659,88 +670,114 @@ small, .text-xs {
     <div class="w-full h-12 bg-purple-600 transform -skew-y-1 origin-left -mt-6"></div>
 
     <!-- What We Provide -->
-<section class="relative bg-[#020205] py-16 sm:py-20 md:py-28 px-4 sm:px-8 lg:px-16 overflow-hidden">
-  <!-- AURA (subtle, hidden on very small screens) -->
-  <div class="aura-container pointer-events-none">
-    <div class="aura-blob aura-purple hidden md:block" style="width:420px;height:420px;filter:blur(96px);opacity:0.28;top:-8%;left:-6%"></div>
-    <div class="aura-blob aura-blue hidden md:block" style="width:420px;height:420px;filter:blur(110px);opacity:0.22;bottom:-8%;right:-6%;animation-delay:-5s"></div>
-    <div class="aura-blob aura-pink hidden lg:block" style="width:380px;height:380px;filter:blur(100px);opacity:0.20;top:18%;right:12%;animation-duration:18s"></div>
-
-    <div class="absolute inset-0 opacity-6" style="background-image: radial-gradient(#ffffff 1px, transparent 1px); background-size: 30px 30px;"></div>
-  </div>
-
-  <div class="max-w-7xl mx-auto relative z-10">
-    <div class="flex flex-col lg:flex-row items-center gap-12 lg:gap-20">
-      <!-- LEFT: copy/content -->
-      <div class="w-full lg:w-1/2 text-center lg:text-left">
-        <div class="inline-flex items-center gap-3 mb-4 justify-center lg:justify-start">
-          <div class="w-10 h-10 bg-gradient-to-br from-purple-600 to-blue-500 rounded-full flex items-center justify-center shadow-[0_0_18px_rgba(124,58,237,0.45)]">
-            <span class="text-white text-sm">★</span>
-          </div>
-          <span class="font-bold uppercase tracking-widest text-xs text-purple-300">What We Provide</span>
-        </div>
-
-        <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight mb-6 text-white">
-          Explore Powerful<br class="hidden md:inline"> Social Features<br class="md:block hidden">
-          <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-400 to-blue-400 serif-italic">For Elite Brands</span>
-        </h2>
-
-        <p class="text-gray-300 text-base sm:text-lg md:text-xl leading-relaxed mb-8 max-w-xl mx-auto lg:mx-0 opacity-85">
-          Stop following trends — start setting them. We provide the infrastructure for high-velocity creator growth and authentic brand lift.
-        </p>
-
-        <div class="grid grid-cols-2 sm:grid-cols-2 gap-4 max-w-md mx-auto lg:mx-0">
-          <div class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
-            <div class="w-6 h-6 bg-purple-600 rounded-full flex items-center justify-center text-[11px]">✓</div>
-            Creators
-          </div>
-          <div class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
-            <div class="w-6 h-6 bg-blue-600 rounded-full flex items-center justify-center text-[11px]">✓</div>
-            Artists
-          </div>
-          <div class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
-            <div class="w-6 h-6 bg-pink-600 rounded-full flex items-center justify-center text-[11px]">✓</div>
-            Influencers
-          </div>
-          <div class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
-            <div class="w-6 h-6 bg-indigo-600 rounded-full flex items-center justify-center text-[11px]">✓</div>
-            Celebrities
-          </div>
-        </div>
-      </div>
-
-      <!-- RIGHT: image composition -->
-      <div class="w-full lg:w-1/2 flex justify-center lg:justify-end items-center relative">
-        <!-- main card -->
-        <div class="relative rounded-[28px] overflow-hidden border border-white/10 shadow-[0_18px_60px_rgba(0,0,0,0.45)]"
-             style="width: min(92vw, 520px); height: clamp(220px, 45vh, 380px);">
-          <img src="image/image_27.jpg" alt="Collaboration" class="w-full h-full object-cover">
-          <div class="absolute inset-0 bg-gradient-to-t from-[#020205] via-transparent to-transparent opacity-80"></div>
-
-          <div class="absolute inset-x-0 bottom-0 p-6 flex items-end">
-            <div class="flex gap-4 text-2xl">
-              <span class="animate-bounce" style="animation-delay:0.08s">❤️</span>
-              <span class="animate-bounce" style="animation-delay:0.2s">🔥</span>
-              <span class="animate-bounce" style="animation-delay:0.36s">✨</span>
+    <section class="relative bg-[#020205] py-16 sm:py-20 md:py-28 px-4 sm:px-8 lg:px-16 overflow-hidden">
+        <!-- AURA (subtle, hidden on very small screens) -->
+        <div class="aura-container pointer-events-none">
+            <div class="aura-blob aura-purple hidden md:block"
+                style="width:420px;height:420px;filter:blur(96px);opacity:0.28;top:-8%;left:-6%"></div>
+            <div class="aura-blob aura-blue hidden md:block"
+                style="width:420px;height:420px;filter:blur(110px);opacity:0.22;bottom:-8%;right:-6%;animation-delay:-5s">
             </div>
-          </div>
+            <div class="aura-blob aura-pink hidden lg:block"
+                style="width:380px;height:380px;filter:blur(100px);opacity:0.20;top:18%;right:12%;animation-duration:18s">
+            </div>
+
+            <div class="absolute inset-0 opacity-6"
+                style="background-image: radial-gradient(#ffffff 1px, transparent 1px); background-size: 30px 30px;">
+            </div>
         </div>
 
-        <!-- floating round portrait -->
-        <div class="hidden sm:block absolute -bottom-12 -left-10 md:-left-12 w-40 h-40 md:w-56 md:h-56 rounded-full border-[10px] border-[#020205] overflow-hidden z-20 shadow-[0_18px_60px_rgba(124,58,237,0.35)] animate-float"
-             style="background:#000;">
-          <img src="image/image_4.jpg" alt="Profile" class="w-full h-full object-cover">
-        </div>
+        <div class="max-w-7xl mx-auto relative z-10">
+            <div class="flex flex-col lg:flex-row items-center gap-12 lg:gap-20">
+                <!-- LEFT: copy/content -->
+                <div class="w-full lg:w-1/2 text-center lg:text-left">
+                    <div class="inline-flex items-center gap-3 mb-4 justify-center lg:justify-start">
+                        <div
+                            class="w-10 h-10 bg-gradient-to-br from-purple-600 to-blue-500 rounded-full flex items-center justify-center shadow-[0_0_18px_rgba(124,58,237,0.45)]">
+                            <span class="text-white text-sm">★</span>
+                        </div>
+                        <span class="font-bold uppercase tracking-widest text-xs text-purple-300">What We Provide</span>
+                    </div>
 
-        <!-- system badge -->
-        <div class="absolute top-6 right-0 hidden md:flex items-center gap-3 glass-feature px-4 py-2 rounded-2xl animate-float" style="animation-delay:1.2s;">
-          <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
-          <span class="text-[10px] font-mono tracking-widest text-purple-200">SYSTEM_ONLINE_24/7</span>
+                    <h2
+                        class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight mb-6 text-white">
+                        Explore Powerful<br class="hidden md:inline"> Social Features<br class="md:block hidden">
+                        <span
+                            class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-400 to-blue-400 serif-italic">For
+                            Elite Brands</span>
+                    </h2>
+
+                    <p
+                        class="text-gray-300 text-base sm:text-lg md:text-xl leading-relaxed mb-8 max-w-xl mx-auto lg:mx-0 opacity-85">
+                        Stop following trends — start setting them. We provide the infrastructure for high-velocity
+                        creator growth and authentic brand lift.
+                    </p>
+
+                    <div class="grid grid-cols-2 sm:grid-cols-2 gap-4 max-w-md mx-auto lg:mx-0">
+                        <div
+                            class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
+                            <div
+                                class="w-6 h-6 bg-purple-600 rounded-full flex items-center justify-center text-[11px]">
+                                ✓</div>
+                            Creators
+                        </div>
+                        <div
+                            class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
+                            <div class="w-6 h-6 bg-blue-600 rounded-full flex items-center justify-center text-[11px]">✓
+                            </div>
+                            Artists
+                        </div>
+                        <div
+                            class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
+                            <div class="w-6 h-6 bg-pink-600 rounded-full flex items-center justify-center text-[11px]">✓
+                            </div>
+                            Influencers
+                        </div>
+                        <div
+                            class="glass-feature py-4 px-5 rounded-[20px] flex items-center gap-3 font-semibold text-white">
+                            <div
+                                class="w-6 h-6 bg-indigo-600 rounded-full flex items-center justify-center text-[11px]">
+                                ✓</div>
+                            Celebrities
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RIGHT: image composition -->
+                <div class="w-full lg:w-1/2 flex justify-center lg:justify-end items-center relative">
+                    <!-- main card -->
+                    <div class="relative rounded-[28px] overflow-hidden border border-white/10 shadow-[0_18px_60px_rgba(0,0,0,0.45)]"
+                        style="width: min(92vw, 520px); height: clamp(220px, 45vh, 380px);">
+                        <img src="image/image_27.jpg" alt="Collaboration" class="w-full h-full object-cover">
+                        <div
+                            class="absolute inset-0 bg-gradient-to-t from-[#020205] via-transparent to-transparent opacity-80">
+                        </div>
+
+                        <div class="absolute inset-x-0 bottom-0 p-6 flex items-end">
+                            <div class="flex gap-4 text-2xl">
+                                <span class="animate-bounce" style="animation-delay:0.08s">❤️</span>
+                                <span class="animate-bounce" style="animation-delay:0.2s">🔥</span>
+                                <span class="animate-bounce" style="animation-delay:0.36s">✨</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- floating round portrait -->
+                    <div class="hidden sm:block absolute -bottom-12 -left-10 md:-left-12 w-40 h-40 md:w-56 md:h-56 rounded-full border-[10px] border-[#020205] overflow-hidden z-20 shadow-[0_18px_60px_rgba(124,58,237,0.35)] animate-float"
+                        style="background:#000;">
+                        <img src="image/image_4.jpg" alt="Profile" class="w-full h-full object-cover">
+                    </div>
+
+                    <!-- system badge -->
+                    <div class="absolute top-6 right-0 hidden md:flex items-center gap-3 glass-feature px-4 py-2 rounded-2xl animate-float"
+                        style="animation-delay:1.2s;">
+                        <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
+                        <span class="text-[10px] font-mono tracking-widest text-purple-200">SYSTEM_ONLINE_24/7</span>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
     <!-- Powerful Content Marketing, Driven by Creators -->
     <section class="bg-white py-24 px-8 md:px-16 overflow-hidden">
         <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center gap-12 lg:gap-24">
