--- a/Dashboard.html
+++ b/Dashboard.html
@@ -180,6 +180,18 @@
     </main>
   </div>
 
+  <!-- Campaign Description Modal -->
+  <div id="descriptionModal" class="fixed inset-0 z-50 hidden items-center justify-center bg-black/60">
+    <div id="descriptionModalCard" class="bg-white text-black w-full max-w-lg rounded-xl shadow-xl p-6 relative mx-4">
+      <button id="closeDescriptionBtn" class="absolute top-3 right-3 text-gray-500 hover:text-black text-xl">
+        ✕
+      </button>
+
+      <h3 class="text-xl font-bold mb-3">Campaign Details</h3>
+      <div id="campaignDescription" class="text-gray-700 leading-relaxed max-h-[60vh] overflow-auto"></div>
+    </div>
+  </div>
+
   <script>
   (function () {
     const STORAGE_KEY = "Bearer";
@@ -284,6 +296,38 @@
       loadCampaigns(); // fetch campaigns on open
     });
 
+    /** Modal functions - expose to global for inline handlers */
+    window.showDescription = function (text) {
+      const el = document.getElementById("campaignDescription");
+      el.innerText = text || "No description available.";
+      const modal = document.getElementById("descriptionModal");
+      modal.classList.remove("hidden");
+      modal.classList.add("flex");
+    };
+
+    window.closeDescription = function () {
+      const modal = document.getElementById("descriptionModal");
+      modal.classList.add("hidden");
+      modal.classList.remove("flex");
+    };
+
+    // close modal on overlay click or escape
+    const descriptionModal = document.getElementById("descriptionModal");
+    const descriptionModalCard = document.getElementById("descriptionModalCard");
+    const closeDescriptionBtn = document.getElementById("closeDescriptionBtn");
+
+    closeDescriptionBtn.addEventListener("click", window.closeDescription);
+
+    descriptionModal.addEventListener("click", (e) => {
+      if (e.target === descriptionModal) {
+        window.closeDescription();
+      }
+    });
+
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape") window.closeDescription();
+    });
+
     /** Load profile + summary stats **/
     async function loadProfileAndStats() {
       const token = localStorage.getItem(STORAGE_KEY);
@@ -362,18 +406,31 @@
           const campaignId = c.id ?? c.campaign_id;
           const joined = !!c.joined; // optional server-provided flag
           const tr = document.createElement("tr");
-          campaign_link =  c.campaign_link
+          const campaign_link = c.campaign_link || "#";
           tr.className = "border-b border-white/5 hover:bg-white/[0.02] transition";
+
+          // prepare a safe description string and inject using JSON.stringify to preserve quotes safely
+          const descriptionRaw = c.description ?? c.campaign_description ?? "No description provided.";
+          const descriptionSafe = escapeHtml(descriptionRaw);
+          const descriptionJsString = JSON.stringify(descriptionSafe); // safe to place in onclick call
 
           tr.innerHTML = `
             <td class="px-6 py-4 font-semibold">${name}</td>
             <td class="px-6 py-4">${brand}</td>
             <td class="px-6 py-4">${status}</td>
             <td class="px-6 py-4">${payout}</td>
-            <td class="px-6 py-4 text-right">
-              ${joined
-                ? '<button class="bg-gray-600 text-white px-4 py-2 rounded text-xs font-semibold" disabled>Joined</button>'
-                : `<button data-id="${campaignId}" class="join-btn bg-white text-black px-4 py-2 rounded text-xs font-bold">Join</button>`
+            <td class="px-6 py-4 text-right space-x-2">
+              <button 
+                onclick="showDescription(${descriptionJsString})"
+                class="bg-blue-500 text-white px-3 py-2 rounded text-xs font-semibold mr-2"
+              >
+                View
+              </button>
+
+              ${
+                joined
+                  ? '<button class="bg-gray-600 text-white px-3 py-2 rounded text-xs" disabled>Joined</button>'
+                  : `<button data-id="${campaignId}" class="join-btn bg-white text-black px-3 py-2 rounded text-xs font-bold">Join</button>`
               }
             </td>
           `;
@@ -491,61 +548,47 @@
         }
 
         // Render joined campaigns
-tbody.innerHTML = "";
+        tbody.innerHTML = "";
 
-list.forEach(c => {
-  const name = escapeHtml(c.campaign_name ?? c.name ?? "Untitled");
-  const status = escapeHtml(c.status ?? "—");
-  const id = escapeHtml(String(c.id ?? c.campaign_id ?? ""));
-  const campaign_link = c.campaign_link || "#";
+        list.forEach(c => {
+          const name = escapeHtml(c.campaign_name ?? c.name ?? "Untitled");
+          const status = escapeHtml(c.status ?? "—");
+          const id = escapeHtml(String(c.id ?? c.campaign_id ?? ""));
+          const campaign_link = c.campaign_link || "#";
 
-  const tr = document.createElement("tr");
-  tr.className = "border-b border-white/5";
+          const tr = document.createElement("tr");
+          tr.className = "border-b border-white/5";
 
-  tr.innerHTML = `
-    <td class="px-6 py-4 font-semibold">${name}</td>
-    <td class="px-6 py-4">${status}</td>
-    <td class="px-6 py-4 font-mono text-xs opacity-50">${id}</td>
-    <td class="px-6 py-4 text-right">
-      <button 
-        class="view-joined bg-white text-black px-3 py-1 rounded text-xs"
-        data-id="${id}"
-        data-link="${campaign_link}"
-      >
-        View
-      </button>
-    </td>
-  `;
+          tr.innerHTML = `
+            <td class="px-6 py-4 font-semibold">${name}</td>
+            <td class="px-6 py-4">${status}</td>
+            <td class="px-6 py-4 font-mono text-xs opacity-50">${id}</td>
+            <td class="px-6 py-4 text-right">
+              <button 
+                class="view-joined bg-white text-black px-3 py-1 rounded text-xs"
+                data-id="${id}"
+                data-link="${escapeHtml(campaign_link)}"
+              >
+                View
+              </button>
+            </td>
+          `;
 
-  tbody.appendChild(tr);
-});
-
-
-        // optional: attach handlers for view buttons
-        document.querySelectorAll(".view-joined").forEach(btn => {
-          btn.addEventListener("click", (e) => {
-            const id = e.currentTarget.getAttribute("data-id");
-            showToast("Open campaign details: " + id);
-            // implement modal or route if needed
-            window.location.href = `${campaign_link}`;
-            console.log(campaign_link)
-
-          });
+          tbody.appendChild(tr);
         });
 
-        document.addEventListener("click", function (e) {
-  if (e.target.classList.contains("view-joined")) {
-    const campaignLink = e.target.dataset.link;
-
-    if (!campaignLink || campaignLink === "#") {
-      alert("Campaign link not available");
-      return;
-    }
-
-    window.location.href = campaignLink;
-  }
-});
-
+        // attach handlers for view buttons
+        document.querySelectorAll(".view-joined").forEach(btn => {
+          btn.addEventListener("click", (e) => {
+            const campaignLink = e.currentTarget.getAttribute("data-link");
+            if (!campaignLink || campaignLink === "#") {
+              alert("Campaign link not available");
+              return;
+            }
+            // navigate to campaign link
+            window.location.href = campaignLink;
+          });
+        });
 
       } catch (err) {
         console.error("joined campaigns failed", err);
